[gd_scene load_steps=6 format=2]

[ext_resource path="res://ui/main-menu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://ui/main-menu/KillPill_630x445.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/WendyOne-Regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/options/Options.tscn" type="PackedScene" id=4]
[ext_resource path="res://music/main_theme.ogg" type="AudioStream" id=5]

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer2"]
margin_right = 800.0
margin_bottom = 600.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 30.0
margin_top = 30.0
margin_right = -30.0
margin_bottom = -30.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_right = 740.0
margin_bottom = 540.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 368.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="Options" type="VBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_right = 368.0
margin_bottom = 540.0
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 2

[node name="PlayButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
margin_top = 387.0
margin_right = 368.0
margin_bottom = 418.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 3 )
text = "Play"

[node name="OptionsButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
margin_top = 448.0
margin_right = 368.0
margin_bottom = 479.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 3 )
text = "Options"

[node name="QuitButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/Options"]
margin_top = 509.0
margin_right = 368.0
margin_bottom = 540.0
rect_min_size = Vector2( 0, 30 )
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 372.0
margin_right = 740.0
margin_bottom = 540.0
size_flags_horizontal = 3

[node name="Options" parent="." instance=ExtResource( 4 )]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -464.0
margin_top = -318.5
margin_right = 464.0
margin_bottom = 318.5

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
pause_mode = 2
stream = ExtResource( 5 )
volume_db = -10.0
autoplay = true
bus = "Music"
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options/PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options/OptionsButton" to="." method="_on_OptionsButton_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Options/QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="on_close" from="Options" to="." method="_on_Options_on_close"]
